# PyGLM

./: .gitignore  .gitmodules  .travis.yml  COPYING  GLM_LICENSE  Generate Function Reference.bat  LICENSE  MANIFEST.in  NUMPY LICENSE  PyGLM vs NumPy.py  PyGLM.cpp  PyGLM_test.py  README.md  README.rml  README.rst  README.sb  SlashBack.py  Update README.bat  VERSION  _noise.h  _vectorize.h  build_options.h  color_space.h  constants.h  copying.txt  epsilon.h  func_common.h  func_exponential.h  func_geometric.h  func_matrix.h  func_trigonometric.h  func_vector_relational.h  generate_function_reference.py  glm.py  glminternalfuncs.h  glmtypes.h  license.h  matrix_access.h  matrix_transform.h  noise.h  (+23 more)
PyGLM/: __init__.py  compiler_setup.h  imports.h
PyGLM build/: .gitignore  PyGLM build.vcxproj  PyGLM build.vcxproj.filters
PyGLM-stubs/: LICENSE
PyGLM_lib/: PyGLM.cpp  build_options.h  version.h
detail/: _vectorize.py  definitions.py  exc.py  func_exponential.py  func_matrix.py  func_trigonometric.py  func_vector_relational.py  prep.py  setup.py  type_mat2x2.py  type_mat2x3.py  type_mat3x2.py  type_mat3x4.py  type_mat4x3.py  type_mat4x4.py  type_vec2.py  type_vec3.py  type_vec4.py
glm/: __init__.py  datatypes.py  prep.py
glm-stubs/: glm_typing.py
pyglm/: __init__.py
pyglm-stubs/: glm.pyi
simd/: platform.py
src/: _vectorize.h  func_common.h  func_geometric.h  func_matrix.h  func_vector_relational.h  glminternalfuncs.h  glmtypes.h  pyglm.c  type_mat2x2.h  type_mat2x3.h  type_mat2x4.h  type_mat3x2.h  type_mat3x3.h  type_mat3x4.h  type_mat4x2.h  type_mat4x3.h  (+4 more)
(+680 files in other folders)
