[metadata]
name = pyglm
version = file: VERSION
author = Zuzu_Typ
author_email = zuzu.typ@gmail.com
description = OpenGL Mathematics library for Python
long_description = file: README.md
long_description_content_type = text/markdown
keywords = GLM, OpenGL, matrix, vector, vec, mat, Mathematics, 3D, python, python3, 3, library, python-c-api, c-api, math-library, numpy, pyrr, pip, pypi, matrix-manipulation, matrix-multiplication, matrix-functions, quaternion, c, glsl
python_requires = >=3.7
license = zlib/libpng license
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: zlib/libpng License
	Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries
	Topic :: Scientific/Engineering :: Physics
	Typing :: Typed
project_urls =
    Source Code = https://github.com/Zuzu-Typ/PyGLM/
    Documentation  = https://github.com/Zuzu-Typ/PyGLM/wiki

[options]
include_package_data = True
packages = find:
